--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -15,8 +15,17 @@
   }
   
 .clients__item {
-    width: 170px;
+    width: 210px;
     height: 92px;
+
+    @media screen and (min-width: 768px) {
+      width: 226px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+    }
+
   }
 
   
