--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,5 +1,6 @@
 .filter__item {
     margin-right: 8px;
+    margin-bottom: 15px;
 
     &:last-child {
     margin-right: none;
@@ -34,9 +35,11 @@
   }
 
   .filter {
+    width: 400px;
     display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-bottom: 40px;
   }
   .pointer {
     cursor: pointer;
