--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -12,7 +12,15 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
+    @media screen and (min-width: 1200px) {
+      flex-wrap: nowrap;
+      gap: 30px;
+    }
+    @media screen and (min-width: 768px) {
+      gap: 30px;
   }
+}
 
   .card {
     margin-bottom: 30px;
@@ -22,7 +30,7 @@
     overflow: hidden;
 
     &:last-child {
-    margin-bottom: 0px;
+    margin-bottom: 30px;
   }
 
 }
