--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -53,7 +53,7 @@ section.features {
     justify-content: center;
     align-items: center;
     background-color: var(--bg-color-utility);
-    width: 450px;
+    max-width: 450px;
     height: 120px;
     border-radius: 4px;
 
