--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -155,7 +155,8 @@
   }
 
   .subscription__input {
-    width: 450px;
+    // width: 450px;
+    width: 100%;
     height: 50px;
     margin-bottom: 20px;
     padding-left: 16px;
@@ -170,6 +171,14 @@
     @media screen and (min-width: 1200px) {
       width: 358px;
       margin-bottom: 0px;
+    }
+
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+
+    @media screen and (min-width: 786px) {
+      width: 450px;
     }
   }
 
