--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,18 @@ button {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
 
 .modal__input {
   width: 100%;
@@ -356,6 +368,7 @@ label.modal__politic-label::before {
 
 .main-nav__list {
   display: flex;
+  display: none;
 }
 
 .main-nav__item {
@@ -400,6 +413,7 @@ header .container {
 
 .header-contacts {
   display: flex;
+  display: none;
   margin-left: auto;
 }
 
@@ -433,28 +447,181 @@ header .container {
   fill: currentColor;
 }
 
+.mobile-menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--bg-color);
+  top: 0px;
+  left: 0px;
+  right: 0px;
+}
+.mobile-menu .container {
+  flex-direction: column;
+  height: 100%;
+}
+
+.menu-open {
+  background-color: transparent;
+  border: 0px;
+  margin-left: auto;
+}
+
+.menu-close-btn {
+  background-color: transparent;
+  border: 0px;
+  display: flex;
+  position: absolute;
+  top: 21px;
+  right: 26px;
+}
+
+.menu-close-icon {
+  fill: #000000;
+  width: 19px;
+  height: 19px;
+}
+
+.mob-nav__list {
+  margin-bottom: 302px;
+}
+
+.mob-nav__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1, 17;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color #212121);
+  padding: 0px;
+  margin-bottom: 35px;
+}
+
+.soc-network-menu {
+  display: flex;
+  gap: 10px;
+}
+
+.tel-contacts {
+  font-size: 34px;
+  padding: 0px;
+  margin-bottom: 32px;
+}
+
+.mail-contacts {
+  font-size: 24px;
+  line-height: 28px;
+  padding: 0px;
+  margin-bottom: 64px;
+}
+
+.soc-network-menu__item {
+  display: flex;
+  align-items: center;
+}
+
+.line {
+  margin-left: 10px;
+  font-size: 22px;
+  color: rgba(33, 33, 33, 0.2);
+}
+
+.menu-contacts__link {
+  font-size: 18px;
+  line-height: 1.22;
+  font-weight: 500;
+  color: var(--accent-color);
+}
+
+.menu-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  padding-left: 40px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
 .hero {
   background-color: var(--main-color);
   text-align: center;
   padding: 200px 0px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   max-width: 1600px;
   margin: 0 auto;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob-2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-tab.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-tab-2x.jpg);
+  }
+}
+@media screen and (max-width: 767px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob.jpg);
+  }
+}
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob-2x.jpg);
+  }
+}
 
 .hero__title {
-  width: 700px;
-  margin: 0px auto 30px auto;
+  width: 360px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1, 62;
+  margin: 0px auto 30px auto;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--bg-color);
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 700px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+@media screen and (max-width: 479px) {
+  .hero__title {
+    width: 305px;
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 1, 62;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    width: 360px;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1, 62;
+  }
 }
 
 .hero__btn {
