--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -35,15 +35,15 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    // @media screen and (max-width: 767px) {
-    //   min-width: 528px;
-    //   min-height: 581px;
-    // }
+    @media screen and (max-width: 767px) {
+      width: 528px;
+      height: 581px;
+    }
 
-    // @media screen and (min-width: 768px) {
-    // width: 270px;
-    // height: 120px;
-    // }
+    @media screen and (min-width: 768px) {
+      width: 528px;
+      height: 581px;;
+    }
   }
 
   .modal__input {
