--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,6 +25,7 @@
    
   .main-nav__list {
     display: flex;
+    display: none;
   }
 
   .main-nav__item {
@@ -76,6 +77,7 @@
 
   .header-contacts {
     display: flex;
+    display: none;
     margin-left:auto;
   }
 
@@ -116,3 +118,109 @@
     fill: currentColor;
 
   }
+
+  .mobile-menu {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--bg-color);
+    top: 0px;
+    left: 0px;
+    right: 0px;
+  
+
+    .container {
+      flex-direction: column;
+      height: 100%;
+    }
+  }
+  .menu-open {
+    background-color: transparent;
+    border: 0px;
+    margin-left: auto;
+    
+  }
+
+  .menu-close-btn {
+    background-color: transparent;
+    border: 0px;
+    display: flex;
+    position: absolute;
+    top: 21px;
+    right: 26px;
+  }
+
+  .menu-close-icon {
+    fill: #000000;
+    width: 19px;
+    height: 19px;
+    
+  }
+
+  // .mobile-menu {
+  //   background-color: var(--bg-color);
+  //   padding-left: 40px;
+  //   padding-top: 48px;
+  //   padding-bottom: 48px;
+  // }
+
+  .mob-nav__list {
+    margin-bottom: 302px;
+  }
+
+ .mob-nav__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1,17;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color #212121);
+  padding: 0px;
+  margin-bottom: 35px;
+ 
+}
+  
+  .soc-network-menu {
+    display: flex;
+    gap: 10px;
+    
+  }
+.tel-contacts{
+  font-size: 34px;  
+  padding: 0px;
+  margin-bottom: 32px;
+}
+
+.mail-contacts {
+font-size: 24px;
+line-height: 28px;
+padding: 0px;
+margin-bottom: 64px;
+}
+.soc-network-menu__item {
+  display: flex;
+  align-items: center;
+}
+
+  .line {
+      margin-left: 10px;
+      font-size: 22px;
+      color:rgba(33, 33, 33, 0.2);
+  
+    }
+
+   .menu-contacts__link {
+    font-size: 18px;
+    line-height: 1.22;
+    font-weight: 500;
+    color: var(--accent-color);
+   }
+   
+ .menu-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  padding-left: 40px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+ }  
