--- a/css/main.css
+++ b/css/main.css
@@ -461,6 +461,12 @@ header .container {
   height: 100%;
 }
 
+.menu-is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
 .menu-open {
   background-color: transparent;
   border: 0px;
