--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -127,6 +127,7 @@
     top: 0px;
     left: 0px;
     right: 0px;
+
   
 
     .container {
@@ -134,6 +135,13 @@
       height: 100%;
     }
   }
+
+    .menu-is-hidden {
+      opacity: 0;
+      pointer-events: none;
+      visibility: hidden;
+    }
+
   .menu-open {
     background-color: transparent;
     border: 0px;
@@ -157,12 +165,6 @@
     
   }
 
-  // .mobile-menu {
-  //   background-color: var(--bg-color);
-  //   padding-left: 40px;
-  //   padding-top: 48px;
-  //   padding-bottom: 48px;
-  // }
 
   .mob-nav__list {
     margin-bottom: 302px;
