--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,6 +13,13 @@
     font-size: 26px;
     line-height: 1.19;
     color: #000000;
+    @media screen and (min-width: 768px) {
+      margin-right: 87px;
+    }
+    @media screen and (max-width: 767px) {
+      margin-right: 87px;
+
+    }
   }
   
   .logo__accent {
@@ -21,18 +28,27 @@
 
   .main-nav {
     display: flex;
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      margin-right: 315px;
+    }
   }
    
   .main-nav__list {
     display: none;
+    
 
     @media screen and (min-width: 768px) {
       display: flex;
     }
+   
   }
 
   .main-nav__item {
     margin-right: 50px;
+    @media screen and (min-width: 768px) {
+      margin: 0;
+    }
   }
 
   .main-nav__item:last-child {
@@ -81,15 +97,17 @@
   .header-contacts {
     display: none;
     margin-left:auto;
+    margin-right: 302px;
 
     @media screen and (min-width: 768px) {
       display: flex;
       flex-wrap: wrap;
+      margin-left: 96px;
     }
 
     @media screen and (min-width: 1200px) {
       display: flex;
-      flex-wrap: nowrap;
+      margin-left: 315px;
     }
   }
 
@@ -123,12 +141,11 @@
   }
 }
   
-  
-
   .header-contacts__item {
     margin-right: 50px;
     align-items: center;  
-
+   
+  }
   &:last-child {
     margin-right: 0px;
   }
@@ -142,16 +159,23 @@
 
   .mobile-menu {
     position: fixed;
+    z-index: 1;
     width: 100vw;
     height: 100vh;
     background-color: var(--bg-color);
     top: 0px;
     left: 0px;
     right: 0px;
+    
 
-    transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+
+.menu-container.is-open {
+  transform: translateX(0);
+
 
     .container {
       flex-direction: column;
@@ -163,11 +187,6 @@
     }
   }
 
-    .menu-is-hidden {
-      opacity: 0;
-      pointer-events: none;
-      visibility: hidden;
-    }
 
   .menu-open {
     background-color: transparent;
