--- a/css/main.css
+++ b/css/main.css
@@ -362,13 +362,14 @@ label.modal__politic-label::before {
     margin-right: 87px;
   }
 }
+@media screen and (max-width: 767px) {
+  .logo {
+    margin-right: 87px;
+  }
+}
 
 .logo__accent {
   color: var(--accent-color);
-}
-
-.main-nav {
-  display: flex;
 }
 
 .main-nav__list {
@@ -428,7 +429,6 @@ header .container {
   .header-contacts {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 96px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -444,6 +444,7 @@ header .container {
   letter-spacing: 0.02em;
   color: var(--text-color);
   display: flex;
+  flex-wrap: nowrap;
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -468,7 +469,7 @@ header .container {
 }
 
 .header-contacts__item {
-  margin-right: 50px;
+  margin-right: 30px;
   align-items: center;
 }
 .header-contacts__item:last-child {
@@ -478,6 +479,10 @@ header .container {
 .contacts-icon {
   margin-right: 10px;
   fill: currentColor;
+}
+
+.mobile-menu.is-open {
+  transform: translateX(10px);
 }
 
 .mobile-menu {
@@ -491,19 +496,6 @@ header .container {
   right: 0px;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
-}
-.menu-container.is-open .container {
-  flex-direction: column;
-  height: 100%;
-}
-@media screen and (min-width: 768px) {
-  .menu-container.is-open {
-    display: none;
-  }
 }
 
 .menu-open {
@@ -596,7 +588,7 @@ header .container {
   background-color: var(--main-color);
   text-align: center;
   padding: 200px 0px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img-mob.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -605,7 +597,7 @@ header .container {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img-mob-2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -620,22 +612,22 @@ header .container {
 }
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-tab.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img-tab.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-tab-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img-tab-2x.jpg);
   }
 }
 @media screen and (max-width: 767px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img-mob.jpg);
   }
 }
 @media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img-mob-2x.jpg);
   }
 }
 
