--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -22,27 +22,19 @@
     }
   }
 
-  .container__nav {
-    @media screen and (min-width: 768px) {
-    display: flex;
-    justify-content: space-between;
-  }
+// .container__nav {
+//   display: flex;
+//   flex-wrap: nowrap;
+//   }
    
-  }
   
-  .logo__accent {
+  
+.logo__accent {
     color: var(--accent-color);
   }
 
-  .main-nav {
-    display: flex;
-    @media screen and (min-width: 1200px) {
-      display: flex;
-      margin-right: 315px;
-    }
-  }
-   
-  .main-nav__list {
+
+.main-nav__list {
     display: none;
     
 
@@ -52,18 +44,16 @@
    
   }
 
-  .main-nav__item {
+.main-nav__item {
     margin-right: 50px;
-    @media screen and (min-width: 768px) {
-      margin: 0;
-    }
+
   }
 
-  .main-nav__item:last-child {
+.main-nav__item:last-child {
     margin-right: 0px;
   }
 
-  .main-nav__link {
+.main-nav__link {
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
@@ -98,11 +88,11 @@
   bottom: -1px;
 }
   
-  header .container {
+header .container {
     display: flex;
   }
 
-  .header-contacts {
+.header-contacts {
     display: none;
     margin-left:auto;
 
@@ -115,17 +105,19 @@
 
     @media screen and (min-width: 1200px) {
       display: flex;
+      flex-wrap: nowrap;
      
     }
   }
 
-  .header-contacts__link {
+.header-contacts__link {
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--text-color);
 
     display: flex;
+    flex-wrap: nowrap;
     align-items: center;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -149,27 +141,28 @@
   }
 }
   
-  .header-contacts__item {
-    margin-right: 50px;
+.header-contacts__item {
+    margin-right: 30px;
     align-items: center;  
    
-  }
+  
   &:last-child {
     margin-right: 0px;
   }
+}
 
 
-  .contacts-icon {
+.contacts-icon {
     margin-right: 10px;
     fill: currentColor;
 
   }
 
-  .mobile-menu.is-open {
+.mobile-menu.is-open {
     transform: translateX(10px);
    }
 
-  .mobile-menu {
+.mobile-menu {
     position: fixed;
     z-index: 1;
     width: 100vw;
@@ -185,22 +178,21 @@
 }
 
 
-.menu-container.is-open {
-  transform: translateX(0);
+// .menu-container.is-open {
+//   transform: translateX(0);
+
+//     .container {
+//       flex-direction: column;
+//       height: 100%;
+//     }
+
+//     @media screen and (min-width: 768px) {
+//       display: none;
+//     }
+//   }
 
 
-    .container {
-      flex-direction: column;
-      height: 100%;
-    }
-
-    @media screen and (min-width: 768px) {
-      display: none;
-    }
-  }
-
-
-  .menu-open {
+.menu-open {
     background-color: transparent;
     border: 0px;
     margin-left: auto;
@@ -211,7 +203,7 @@
     
   }
 
-  .menu-close-btn {
+.menu-close-btn {
     background-color: transparent;
     border: 0px;
     display: flex;
@@ -220,7 +212,7 @@
     right: 26px;
   }
 
-  .menu-close-icon {
+.menu-close-icon {
     fill: #000000;
     width: 19px;
     height: 19px;
@@ -228,11 +220,11 @@
   }
 
 
-  .mob-nav__list {
+.mob-nav__list {
     margin-bottom: 302px;
   }
 
- .mob-nav__link {
+.mob-nav__link {
   font-weight: 500;
   font-size: 40px;
   line-height: 1,17;
@@ -243,11 +235,12 @@
  
 }
   
-  .soc-network-menu {
+.soc-network-menu {
     display: flex;
     gap: 10px;
     
   }
+
 .tel-contacts{
   font-size: 34px;  
   padding: 0px;
@@ -260,26 +253,27 @@ line-height: 28px;
 padding: 0px;
 margin-bottom: 64px;
 }
+
 .soc-network-menu__item {
   display: flex;
   align-items: center;
 }
 
-  .line {
+.line {
       margin-left: 10px;
       font-size: 22px;
       color:rgba(33, 33, 33, 0.2);
   
     }
 
-   .menu-contacts__link {
+.menu-contacts__link {
     font-size: 18px;
     line-height: 1.22;
     font-weight: 500;
     color: var(--accent-color);
    }
    
- .menu-content {
+.menu-content {
   display: flex;
   flex-direction: column;
   height: 100%;
