--- a/css/main.css
+++ b/css/main.css
@@ -379,7 +379,6 @@ label.modal__politic-label::before {
 @media screen and (min-width: 768px) {
   .main-nav {
     display: flex;
-    margin-right: 90px;
   }
 }
 
@@ -390,6 +389,7 @@ label.modal__politic-label::before {
 @media screen and (min-width: 768px) {
   .main-nav__list {
     display: flex;
+    gap: 45px;
   }
 }
 
@@ -446,11 +446,17 @@ header .container {
   .header-contacts {
     display: flex;
     flex-wrap: wrap;
+    margin-left: 96px;
+    margin-top: 21px;
+    margin-right: 15px;
   }
 }
 @media screen and (min-width: 1200px) {
   .header-contacts {
     display: flex;
+    margin-left: 315px;
+    margin-top: 0;
+    margin-right: 0;
   }
 }
 
@@ -486,6 +492,17 @@ header .container {
 .header-contacts__item {
   margin-right: 50px;
   align-items: center;
+}
+@media screen and (max-width: 1199px) {
+  .header-contacts__item {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header-contacts__item {
+    font-size: 12px;
+    line-height: 1.16;
+  }
 }
 .header-contacts__item:last-child {
   margin-right: 0px;
@@ -1235,7 +1252,7 @@ section.services {
 }
 
 .subscription__input {
-  width: 100%;
+  width: 450px;
   height: 50px;
   margin-bottom: 20px;
   padding-left: 16px;
@@ -1252,12 +1269,12 @@ section.services {
     margin-bottom: 0px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 479px) {
   .subscription__input {
-    width: 450px;
+    width: 100%;
   }
 }
-@media screen and (min-width: 786px) {
+@media screen and (max-width: 767px) {
   .subscription__input {
     width: 450px;
   }
