--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -22,13 +22,6 @@
     }
   }
 
-  // .container__nav {
-  //   @media screen and (min-width: 768px) {
-  //   display: flex;
-  //   justify-content: space-between;
-  // }
-   
-  // }
   
 .logo__accent {
     color: var(--accent-color);
@@ -41,7 +34,6 @@
     }
     @media screen and (min-width: 768px) {
       display: flex;
-      margin-right: 90px;
     }
 }
    
@@ -52,6 +44,7 @@
 
     @media screen and (min-width: 768px) {
       display: flex;
+      gap: 45px;
     }
    
   }
@@ -114,11 +107,17 @@ header .container {
     @media screen and (min-width: 768px) {
       display: flex;
       flex-wrap: wrap;
-    
+      margin-left: 96px;
+      margin-top: 21px;
+      margin-right: 15px;
+     
     }
 
     @media screen and (min-width: 1200px) {
       display: flex;
+      margin-left: 315px;
+      margin-top: 0;
+      margin-right: 0;
      
     }
   }
@@ -156,6 +155,15 @@ header .container {
 .header-contacts__item {
     margin-right: 50px;
     align-items: center;  
+
+    @media screen and (max-width: 1199px) {
+      margin-right: 0;
+    }
+    @media screen and (min-width: 768px) {
+      font-size: 12px;
+      line-height: 1.16;
+      
+    }
    
   
   &:last-child {
@@ -284,6 +292,8 @@ margin-bottom: 64px;
     line-height: 1.22;
     font-weight: 500;
     color: var(--accent-color);
+
+    
    }
    
 .menu-content {
