--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,8 +24,8 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
 
-    min-width: 528px;
-    min-height: 581px;
+    min-width: 450px;
+    min-height: 609px;
     border-radius: 4px;
     padding: 40px;
 
@@ -35,14 +35,10 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    @media screen and (max-width: 767px) {
-      width: 528px;
-      height: 581px;
-    }
 
-    @media screen and (min-width: 768px) {
-      width: 528px;
-      height: 581px;;
+    @media screen and (min-width: 1200px) {
+      min-width: 528px;
+      min-height: 581px;;
     }
   }
 
@@ -184,19 +180,18 @@
   .modal__checkbox {
     display: flex;
     justify-content: center;
-
     margin-bottom: 30px;
-  }
 
-  // .input-modal:focus + svg {
-  //   fill: var(--accent-color);
-  // }
+    
+  }
 
   label.modal__politic-label {
     display: flex;
     align-items: center;
     color: var(--text-color);
     cursor: pointer;
+    font-size: 12px;
+    line-height: 1,17;
 
     &::before{
       content: '';
@@ -205,12 +200,17 @@
       border: 2px solid #000000;
       border-radius: 2px;
       margin-right: 9px;
+    
   
       transition-property: background-color border;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
-  
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1,17;
+    }
+    
   }
 
   .modal__politic-check:checked + label::before{
