--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -230,12 +230,6 @@ header .container {
     
   }
 
-
-.mob-nav__list {
-    margin-bottom: 302px;
-    
-  }
-
 .mob-nav__link {
   font-weight: 500;
   font-size: 40px;
@@ -288,7 +282,7 @@ margin-bottom: 64px;
 .menu-content {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   justify-content: space-between;
   padding-left: 40px;
   padding-top: 48px;
