--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -40,6 +40,11 @@
       min-width: 528px;
       min-height: 581px;;
     }
+    // @media screen and (max-width: 449px) and (max-height: 608px){
+
+    //   overflow-x: scroll;
+    //   overflow-y: scroll; 
+    // }
   }
 
   .modal__input {
