--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,13 @@ button {
     min-height: 581px;
   }
 }
+@media screen and (max-width: 449px) and (max-height: 608px) {
+  .modal {
+    justify-content: space-between;
+    width: 100wv;
+    height: 100vw;
+  }
+}
 
 .modal__input {
   width: 100%;
@@ -213,6 +220,11 @@ button {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+}
+@media screen and (max-width: 449px) and (max-height: 608px) {
+  .modal__input-group {
+    margin-bottom: 0px;
+  }
 }
 
 .modal__input-title {
