--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -40,11 +40,11 @@
       min-width: 528px;
       min-height: 581px;;
     }
-    // @media screen and (max-width: 449px) and (max-height: 608px){
-
-    //   overflow-x: scroll;
-    //   overflow-y: scroll; 
-    // }
+    @media screen and (max-width: 449px) and (max-height: 608px){
+      justify-content: space-between;
+      width: 100wv;
+      height: 100vw; 
+    }
   }
 
   .modal__input {
@@ -122,6 +122,9 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
+    @media screen and (max-width: 449px) and (max-height: 608px){
+      margin-bottom: 0px;
+    }
   }
 
   .modal__input-title {
