--- a/css/main.css
+++ b/css/main.css
@@ -146,11 +146,11 @@ button {
     min-height: 581px;
   }
 }
-@media screen and (max-width: 449px) and (max-height: 608px) {
+@media screen and (max-height: 608px) {
   .modal {
-    justify-content: space-between;
-    width: 100wv;
-    height: 100vw;
+    transform: translate(-50%, -25%) scale(1);
+    visibility: visible;
+    overflow-y: scroll;
   }
 }
 
@@ -220,11 +220,6 @@ button {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
-}
-@media screen and (max-width: 449px) and (max-height: 608px) {
-  .modal__input-group {
-    margin-bottom: 0px;
-  }
 }
 
 .modal__input-title {
