--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -38,13 +38,14 @@
 
     @media screen and (min-width: 1200px) {
       min-width: 528px;
-      min-height: 581px;;
+      min-height: 581px;
     }
-    @media screen and (max-width: 449px) and (max-height: 608px){
-      justify-content: space-between;
-      width: 100wv;
-      height: 100vw; 
+    @media screen and (max-height: 608px) {
+      transform: translate(-50%, -25%) scale(1);
+      visibility: visible; 
+      overflow-y: scroll;
     }
+
   }
 
   .modal__input {
@@ -76,6 +77,7 @@
 
   .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0.9);
+  
   }
 
   .close {
@@ -122,9 +124,6 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
-    @media screen and (max-width: 449px) and (max-height: 608px){
-      margin-bottom: 0px;
-    }
   }
 
   .modal__input-title {
