--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -48,6 +48,10 @@
     @media screen and (max-height: 608px) {
       transform: translate(-50%, -25%) scale(1);
     }
+    @media screen and (max-width: 404px) {
+      width: calc (100%-80px);
+     
+    }
   }
 
   .modal__input {
