--- a/css/main.css
+++ b/css/main.css
@@ -137,8 +137,8 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  min-width: 450px;
   min-height: 609px;
+  width: calc 20px;
   border-radius: 4px;
   padding: 40px;
   background-color: var(--bg-color);
@@ -150,6 +150,11 @@ button {
   .modal {
     min-width: 528px;
     min-height: 581px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
   }
 }
 @media screen and (max-height: 608px) {
